--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Anonylists! Organize Gift Giving"
+      content="The Indie Index - Curated Goods. Real People."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/anonylist192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/indieindex192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
